--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,6 +1,6 @@
 <!-- This is your site header, you can replace this with whichever header you want to use -->
 
-<header class="grid-center">
+<header class="grid-center {{page.header-style}}">
   <nav class="col-6-middle">
     <a href="/"> EYES OF A NOMAD </a>
   </nav>
