--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -2,12 +2,13 @@
 
 <header class="grid-center {{page.header-style}}">
   <nav class="col-6-middle">
-    <a href="/"> EYES OF A NOMAD </a>
+    <a href="/" class="header-logo"> EYES OF A NOMAD </a>
   </nav>
   <nav class="col-6-middle right">
     <a class="hamburger" href="#"> MENU </a>
   </nav>
 </header>
+
 
 
 <!-- this is the button to open and close your hamburger menu -->
