--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -34,6 +34,31 @@
     background-color: #F2EEE9;
   }
 
+  .tall-portrait {
+    padding-bottom: 125%;
+  }
+
+  .portrait {
+    padding-bottom: 115%;
+  }
+
+  .square {
+    padding-bottom: 100%;
+  }
+
+  .landscape {
+    padding-bottom: 60%;
+  }
+
+  .tall-landscape {
+    padding-bottom: 69%;;
+  }
+
+  .wide-landscape {
+    padding-bottom: 40%;
+  }
+
+
   body {
     font-family: orpheuspro, serif;
     color: #414141;
@@ -50,21 +75,29 @@
   .right    {  text-align: right;    }
   .centered {  text-align: center;   }
 
-  .padded   {  padding: 5%;    }
+  .padded      {  padding: 5%;    }
+  .padded-10   {  padding: 10%;    }
   .padded-v {  padding-top: 5%; padding-bottom: 5%;  }
   .padded-5vw { padding: 5vw;  }
   .padded-1 {  padding: 1rem;  }
   .padded-2 {  padding: 2rem;  }
   .padded-2-h {  padding: 0 2rem;  }
+  .padded-2-v {  padding: 2rem 0;  }
   .padded-l { padding-left: 5%; }
   .padded-r { padding-right: 5%; }
+  .padded-t-0 {padding-top: 0;}
+  .padded-t-2 {padding-top: 2rem;}
   .padded-t-10 {padding-top: 10rem;}
 
   .padded-5-10 {padding: 5% 10%}
 
   .margin-0 {margin: 0;}
+  .margin-05 {margin: 0.5rem;}
+  .margin-1 {margin: 1rem;}
   .margin-top-1 { margin-top: 1rem; }
   .margin-top-2 { margin-top: 2rem; }
+  .margin-top-5 { margin-top: 5%; }
+  .margin-v-2 { margin: 2rem 0; }
   .margin-bottom-1 { margin-bottom: 1rem; }
   .margin-bottom-2 { margin-bottom: 2rem; }
 
@@ -76,6 +109,7 @@
   .tall-100 {  min-height: 100vh;  }
   .tall-110 {  min-height: 110vh;  }
 
+  .border-05 { border: 0.5rem solid white; }
 
   // Bump
 
@@ -85,9 +119,17 @@
 
   .bump-up-40 { margin-top: -40vh;   }
 
-  .dark-bg      {  background-color: #d7b1a2;     }
+  .dark-bg      {  background-color: #d7b1a2;  }
   .light-bg     {  background-color: #F2EEE9;  }
-  .featured-bg  {  background-color: #f9f0e7;             }
+  .featured-bg  {  background-color: #f9f0e7;  }
+
+  .bg-split-white-tan {
+    background: linear-gradient(180deg, white 50%, #F2EEE9 50%);
+  }
+
+  .bg-split-tan-white {
+    background: linear-gradient(180deg, #F2EEE9 50%, white 50%);
+  }
 
   .light-text   { color: white; }
   .flex-flip:nth-child(2n){  flex-direction: row-reverse; }
@@ -120,10 +162,8 @@
   }
 
   .subtle-heading {
-    font-family: p22-underground, sans-serif;
-    font-weight: 300;
-    letter-spacing: 1px;
-    text-transform: uppercase;
+    font-family: 'PT Sans', sans-serif;
+    font-weight: bold;
   }
 
   h1 {  font-size: 2.5rem;  }
@@ -237,15 +277,21 @@
     margin: 1rem auto;
   }
 
+  hr.wide {
+    width: 8rem;
+    margin: 2rem auto;
+  }
+
   // Logo & Unique Typography
 
   .home-banner .logo {
     font-family: "PT Sans";
     font-weight: bold;
-    font-size: 10vw;
+    font-size: 8vw;
     line-height: 1.1;
     border-bottom: 3px solid;
     margin-right: -6rem;
+    padding-right: 8rem;
     margin-bottom: 10%;
     position: relative;
     z-index: 2;
@@ -281,6 +327,10 @@
 
   p.emphasis {   /* typically added to paragraphs to make them a little bigger, could be a different font or color also */
     font-size: 1.2rem;
+  }
+
+  p.subtle {
+    font-size: 0.9rem;
   }
 
   /* Icons */
