--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -11,9 +11,9 @@
   <div class="col-6_sm-12-middle padded right">
     <nav class="inline">
       <a href="/about"> About </a>|
-      <a href="/blog"> Portfolio </a>|
+      <a href="/portfolio"> Portfolio </a>|
       <a href="work-with-me"> Work with Me </a>|
-      <a href="/course"> Contact </a>
+      <a href="/contact"> Contact </a>
     </nav>
     <nav class="inline socials">
       <a href="http://www.facebook.com/eyesofanomad" target="_blank">
