--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,10 +1,10 @@
 <!-- This is your site header, you can replace this with whichever header you want to use -->
 
 <header class="grid-center {{page.header-style}}">
-  <nav class="col-6-middle">
+  <nav class="col-6">
     <a href="/" class="header-logo"> EYES OF A NOMAD </a>
   </nav>
-  <nav class="col-6-middle right">
+  <nav class="col-6 right">
     <a class="hamburger" href="#"> MENU </a>
   </nav>
 </header>
