--- a/_sass/modular-blocks.scss
+++ b/_sass/modular-blocks.scss
@@ -257,10 +257,10 @@
   bottom:0;
   right: 0;
   opacity: 1;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 
-.hidden {
+.hover-image.hidden {
   opacity: 0;
   transition: all 1s;
 }
