--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -24,7 +24,7 @@
     <h2 class="logo"> EYES OF A NOMAD </h2>
   </a>
   <hr>
-  <a href="/blog"> Blog </a>
-  <a href="/about"> About </a>
-  <a href="/subscribe"> Subscribe </a>
+  <a href="/portfolio"> Portfolio </a>
+  <a href="/work-with-me"> Work With Me </a>
+  <a href="/contact"> Contact </a>
 </nav>
