--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -130,6 +130,8 @@ nav.hover-links {
     top: 1%;
     right: 5%;
     cursor: pointer;
+    z-index: 6;
+    padding: 0.5rem;
   }
 
   .hamburger.active {
