--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -10,6 +10,10 @@
     scroll-behavior: smooth; /* this enables smooth scrolling between internal links */
   }
 
+  /* this overrides the default padding and margin on gridlex elements */
+ [class*=grid] {   margin: 0;  }
+ [class*=col]  {   padding: 0; }
+
   // section {
   //   overflow-y: auto;
   // }
@@ -60,9 +64,7 @@
     color: #414141;
   }
 
-   /* this overrides the default padding and margin on gridlex elements */
-  [class*=grid] {   margin: 0;  }
-  [class*=col]  {   padding: 0; }
+
 
 
   /* ------------- Utility Classes --------------  */
@@ -75,6 +77,7 @@
   .padded-10   {  padding: 10%;    }
   .padded-v {  padding-top: 5%; padding-bottom: 5%;  }
   .padded-5vw { padding: 5vw;  }
+  .padded-05 {  padding: 0.5rem;  }
   .padded-1 {  padding: 1rem;  }
   .padded-2 {  padding: 2rem;  }
   .padded-2-h {  padding: 0 2rem;  }
@@ -125,6 +128,10 @@
 
   .bg-split-tan-white {
     background: linear-gradient(180deg, #F2EEE9 50%, white 50%);
+  }
+
+  .bg-v-white-tan {
+    background: linear-gradient(90deg, white 20%, #F2EEE9 0);
   }
 
   .light-text   { color: white; }
