--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -34,6 +34,10 @@
     background-color: #F2EEE9;
   }
 
+  a.bg-image {
+    display: block;
+  }
+
   .tall-portrait {
     padding-bottom: 175%;
   }
