--- a/_sass/modular-blocks.scss
+++ b/_sass/modular-blocks.scss
@@ -250,7 +250,7 @@
 
 .home-banner .hover-image {
   background-size: cover;
-  background-position: contain;
+  background-position: center;
   position: absolute;
   top: 0;
   left: 0;
