--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 <section class="grid padded-10">
-  <div class="col-6">
+  <div class="col-6_sm-12">
     <div class="bg-image square" style="background-image:url({{page.featured_image}});"></div>
     <p class="image-caption"> {{page.featured-image-caption}} </p>
   </div>
-  <div class="col-6 padded">
+  <div class="col-6_sm-12 padded">
      <h1 class="big-bold {% unless page.vertical-heading == false %} vertical-text {% endunless %}"> {{page.title}}.</h1>
   </div>
   <div class="col-6 padded-t-2">
