--- a/_sass/editor.scss
+++ b/_sass/editor.scss
@@ -1,9 +1,26 @@
 
 /* Typography Styles */
 
-h2.cursive {
-    font-family: cursive;
-    color: pink;
+p.emphasis {
+    font-size: 1.5rem;
+}
+p.subtle {
+  font-family: "PT Sans";
+  font-size: 0.9rem;
+}
+
+p.image-caption-left {
+  transform: rotate(270deg);
+  transform-origin: top left 0;
+  margin-left: -2rem;
+  font-size: 0.8rem;
+}
+
+p.image-caption-right {
+  transform: rotate(270deg);
+  transform-origin: top left 0;
+  margin-left: -2rem;
+  font-size: 0.8rem;
 }
 
 /* Image Styles */
