Add image gallery

--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -5,6 +5,7 @@
 
 <!-- adds Magnific Popups javascript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
+<script src="/assets/dist/js/chocolat.js"></script>
 
 <!-- Slick Slider -->
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
