--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,7 @@
 
 <!-- Magnific Popup for lightbox galleries   -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
+<link rel="stylesheet" href="/assets/dist/css/chocolat.css" />
 
 <!-- Slick Slider -->
 <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
