--- a/_includes/blocks/cols.html
+++ b/_includes/blocks/cols.html
@@ -2,7 +2,7 @@
 
   {% unless block.heading_html == nil %}
   <div class="col-12">
-
+      {{include.block.heading_html}}
   </div>
 
   {% for col in block.columns %}
