--- a/_sass/modular-blocks.scss
+++ b/_sass/modular-blocks.scss
@@ -29,17 +29,28 @@
     background-attachment: fixed;
   }
 
-// Lightbox Gallery Chocolat
-.chocolat-overlay {
-  background-color: rgb(10,10,10);
-}
-.chocolat-wrapper .chocolat-bottom {
-  background: none;
+//  Responsive Video
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
 }
 
-.chocolat-overlay.chocolat-visible {
-  opacity: 0.9;
+.embed-container embed,
+.embed-container iframe,
+.embed-container object {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
+
+
+
 
 // IG Image Banner
 
