--- a/_sass/slider.scss
+++ b/_sass/slider.scss
@@ -1,39 +1,13 @@
 /* Slick slider */
-.slick-blog-loop {
-  color: white;
+.slick-prev {
+  left: -2rem;
 }
 
 .slick-next {
-  right: 1rem;
+  right: -2rem;
 }
 
-.slick-prev {
-  left: 1rem;
-  z-index: 3;
-}
 .slick-next:before, .slick-prev:before {
-  font-family: inherit;
-  color: #fff;
-}
-
-.slick-blog-loop h2 {
-  // font-family: p22-underground, sans-serif;
-  font-size:2rem;
-  // text-transform: uppercase;
-  // letter-spacing: 3px;
-  // font-weight: 200;
-}
-
-.slick-slider .overlay {
-  position: absolute;
-  top:0;
-  bottom:0;
-  left:0;
-  right:0;
-  background: linear-gradient(0deg, rgba(0,0,0,0.6) 0%, rgba(255,255,255,0) 50%);
-}
-
-.banner-inner {
-  position: relative;
-  z-index: 2;
+    font-family: inherit;
+    color: rgb(60,60,60);
 }
