--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -124,6 +124,7 @@
   .padded-2-h {  padding: 0 2rem;  }
   .padded-2-v {  padding: 2rem 0;  }
   .padded-l { padding-left: 5%; }
+  .padded-l-0 { padding-left: 0; }
   .padded-r { padding-right: 5%; }
   .padded-t-0 {padding-top: 0;}
   .padded-t-2 {padding-top: 2rem;}
@@ -138,10 +139,12 @@
   .margin-top-2 { margin-top: 2rem; }
   .margin-top-5 { margin-top: 5%; }
   .margin-v-2 { margin: 2rem 0; }
+  .margin-b-0 { margin-bottom: 0; }
   .margin-bottom-1 { margin-bottom: 1rem; }
   .margin-bottom-2 { margin-bottom: 2rem; }
 
   .capped-width { max-width: 1100px; margin: auto;}
+  .capped-width-narrow { max-width: 1000px; margin: auto;}
 
   .tall-35  {  min-height: 35vh;   }
   .tall-50  {  min-height: 50vh;   }
@@ -160,8 +163,10 @@
   .bump-up-40 { margin-top: -40vh;   }
 
   .dark-bg      {  background-color: #d7b1a2;  }
+  .v-light-bg     {  background-color:#f8f6f4;  }
   .light-bg     {  background-color: #F2EEE9;  }
   .featured-bg  {  background-color: #f9f0e7;  }
+  .grey-bg      {  background-color: #f6f6f6;  }
 
   .bg-split-white-tan {
     background: linear-gradient(180deg, white 50%, #F2EEE9 50%);
@@ -173,17 +178,6 @@
 
   .bg-v-white-tan {
     background: linear-gradient(90deg, white 20%, #F2EEE9 0);
-  }
-
-  .border-center:after {
-    content:"";
-    position: absolute;
-    pointer-events:none;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    border-left: 2px solid rgb(90,90,90);
-    transform: translate(-50%);
   }
 
 
@@ -208,6 +202,24 @@
   top: 0;
 }
 
+.border-center {position: relative;}
+
+.border-center:after {
+  content:"";
+  position: absolute;
+  pointer-events:none;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  border-left: 2px solid rgb(90,90,90);
+  transform: translate(-50%);
+}
+
+@media(max-width:767px) {
+  .border-center:after {
+    content: none;
+  }
+}
 
   /* General typography */
 
@@ -442,4 +454,12 @@
     .home-banner .logo {
         font-size: 2.5rem;
     }
+}
+
+@media(max-width:767px) {
+    .mob-p-0 {
+        padding: 0;
+    }
+    .mob-p-t-0 { padding-top: 0;}
+    .mob-p-b-0 { padding-bottom: 0;}
 }
