--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -26,6 +26,6 @@
   <hr>
   <a href="/"> Home </a>
   <a href="/portfolio"> Portfolio </a>
-  <a href="/work-with-me"> Work With Me </a>
+  <a href="/work-with-us"> Work With Us </a>
   <a href="/contact"> Contact </a>
 </nav>
