--- a/_sass/modular-blocks.scss
+++ b/_sass/modular-blocks.scss
@@ -49,7 +49,11 @@
     height: 100%;
 }
 
+// IG Marketing Feed Gallery
 
+.marketing-gallery .bg-image {
+  border: 1rem solid white;
+}
 
 
 // IG Image Banner
