--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+page_blocks:
 ---
 
 <section class="grid">
@@ -18,16 +19,9 @@ layout: default
   <hr class="centered">
 </section>
 
-<section class="gallery padded centered grid padded-t-0">
-
-  {% for item in include.block.gallery-images %}
-  <div class="col-4 padded-05">
-    <div style="background-image:url('{{item.image_path}}')" class="bg-image {{item.aspect-ratio}}"></div>
-  </div>
-  {% endfor %}
-
-  <div class="margin-top-1"> {{page.gallery-text_html}}</div>
-</section>
+{% for block in page.page_blocks %}
+      {% include blocks/{{block._id}}.html block=block %}
+{% endfor %}
 
 <section class="padded">
   <div class="padded bg-v-white-tan">
