update config classes

--- a/_includes/blocks/text-block.html
+++ b/_includes/blocks/text-block.html
@@ -1,8 +1,6 @@
-<section class="{{include.block-class}}">
+<section class="{{include.block-classes}}">
 
-  <div class="{{include.inner-block-class}}">
-
-      {{content}}
+  <div class="{{include.inner-block-classes}}">
 
       {{include.block.content_html}}
 
