--- a/_includes/blocks/cols.html
+++ b/_includes/blocks/cols.html
@@ -4,6 +4,7 @@
   <div class="col-12">
       {{include.block.heading_html}}
   </div>
+  {% endunless %}
 
   {% for col in include.block.columns %}
 
