--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -114,7 +114,7 @@
   .right    {  text-align: right;    }
   .centered {  text-align: center;   }
 
-  .padded      {  padding: 5%;    }
+  .padded, .padded-5p      {  padding: 5%;    }
   .padded-10   {  padding: 10%;    }
   .padded-v {  padding-top: 5%; padding-bottom: 5%;  }
   .padded-5vw { padding: 5vw;  }
