--- a/_sass/editor.scss
+++ b/_sass/editor.scss
@@ -1,6 +1,10 @@
 
 /* Typography Styles */
 
+.align-to-left       {  text-align: left;     }
+.align-to-right     {  text-align: right;    }
+.align-to-center    {  text-align: center;   }
+
 p.emphasis {
     font-size: 1.5rem;
 }
