--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -111,9 +111,9 @@
 
   /* ------------- Utility Classes --------------  */
 
-  .left     {  text-align: left;     }
-  .right    {  text-align: right;    }
-  .centered {  text-align: center;   }
+  .left, .align-to-left     {  text-align: left;     }
+  .right, .align-to-right     {  text-align: right;    }
+  .centered, .align-to-center  {  text-align: center;   }
 
   .padded, .padded-5p      {  padding: 5%;    }
   .padded-10   {  padding: 10%;    }
