--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -116,6 +116,7 @@
   .centered, .align-to-center  {  text-align: center;   }
 
   .padded, .padded-5p      {  padding: 5%;    }
+  .padded-tall    {  padding: 15vh 5%;    }
   .padded-10   {  padding: 10%;    }
   .padded-v {  padding-top: 5%; padding-bottom: 5%;  }
   .padded-5vw { padding: 5vw;  }
