--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -3,7 +3,7 @@ layout: default
 page_blocks:
 ---
 
-<section class="grid">
+<section class="grid intro-banner">
   <div class="col-6_sm-2 padded">
       <h1 class="big-bold padded-t-2"> {{page.title}} </h1>
       <h2> {{page.subtitle}} </h2>
@@ -11,6 +11,7 @@ page_blocks:
   <div class="col-6_sm-10 bg-image tall-100" style="background-image:url('{{page.featured_image}}');">
   </div>
 </section>
+
 <section class="padded-10 centered">
   <hr class="centered">
   <div class="padded-1">
@@ -23,8 +24,8 @@ page_blocks:
       {% include blocks/{{block._id}}.html block=block %}
 {% endfor %}
 
-<section class="padded">
-  <h2 class="medium-text big-bold"> Explore More Projects. </h2>
+<section class="padded-tall">
+  <h2 class="med-bold"> Explore More Projects. </h2>
 
 
     <div class="grid mob-horizontal-scroll">
@@ -42,7 +43,7 @@ page_blocks:
 
 </section>
 <style>
-  .big-bold {
+  .intro-banner .big-bold {
     position: relative;
     margin-top: 10vh;
   }
