--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -374,11 +374,21 @@
     letter-spacing: 1px;
   }
 
-  .big-bold {
+  .big-bold,
+  .med-bold,
+  .sm-bold {
     font-family: "PT Sans";
     font-weight: bold;
     font-size: 10vw;
     letter-spacing: 1px;
+  }
+
+  .med-bold {
+    font-size: 6vw;
+  }
+
+  .sm-bold {
+    font-size: 2.5rem;
   }
 
   .border-left    { border-left: 2px solid }
