--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -56,7 +56,7 @@ layout: default
 
   {% for item in page.gallery-images %}
   <a class="col-{{item.size}} padded-05" href="{{item.image_path}}" data-fancybox="gallery">
-    <div style="background-image:url('{{item.image_path}}')" class="bg-image {{item.size}}"></div>
+    <div style="background-image:url('{{item.image_path}}')" class="bg-image {{item.size}} {{item.aspect-ratio}}"></div>
   </a>
   {% endfor %}
 
