--- a/_includes/blocks/gallery.html
+++ b/_includes/blocks/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery padded centered grid padded-t-0">
+<section class="gallery padded centered grid padded-t-0 {{include.block.block-classes | array_to_sentence_string }}">
 
   {% unless include.block.heading_html == nil %}
   <div class="col-12">
