--- a/_sass/buttons-and-forms.scss
+++ b/_sass/buttons-and-forms.scss
@@ -33,38 +33,24 @@
   }
 
   .button-solid {
-    background-color: #be9a85;
-    border-color: #be9a85;
+    background-color: rgb(60,60,60);
     color: white;
+    border: none;
+    padding: 0.8rem 2rem 0.6rem;
   }
 
   .button-solid:hover {
-    background-color: rgb(60, 60, 60);
-    border-color: rgb(60, 60, 60);
+    background-color: #be9a85;
   }
-
-  .arrow { /* this is the arrow button */
-    font-size: 1.5rem;
-    display: inline-block;
-    text-align: center;
-    font-weight: 300;
-    line-height: 1.5rem;
-    min-width: 2.5rem;
-    border: 1px solid #be9a85;
-    padding: 0.5rem;
-    border-radius: 100%;
-    text-decoration: none;
-    color: #be9a85;
-    margin-top: 0.5rem;
-  }
-
-    .arrow:hover {
-      color: rgb(60, 60, 60);
-      border-color: rgb(60, 60, 60);
-    }
 
 
     /* ----- FORMS --------------------------- */
+
+    button, input, select, textarea {
+      font-family: inherit;
+      font-size: 100%;
+      box-sizing: border-box;
+    }
 
     input,
     textarea {
@@ -75,18 +61,16 @@
       width: 100%;
       font-size: 1rem;
       vertical-align: top;
-      font-family: p22-underground, sans-serif;
     }
 
     input:focus,
     textarea:focus {
       outline: none;
-      border: 2px solid #be9a85;
-      /* featured color */
+      border-color: #be9a85;
     }
 
     textarea {
-      min-height: 7em;
+      min-height: 6rem;
     }
 
     input[type="submit"] {
@@ -94,28 +78,75 @@
       display: block;
     }
 
-    form [class*=col-] {
-      padding: 5px;
+    // Work with me form
+
+    .enquiry input {
+      font-family: orpheuspro, serif;
     }
 
-    .email-signup input {
-      width: 30%;
-      display: inline-block;
-      max-width: 250px;
-      margin-top:1rem;
+
+    .floating-input {
+      position: relative;
+      padding-top: 1rem;
+      margin-bottom: 3rem;
     }
 
-    .email-signup .button-solid {
-      padding: 0.8em;
-      border-radius: 0;
-      font-size: 1rem;
-      // background-color: #f9f0e7;
+    .input-text {
+      font-size: 1.2rem;
+      line-height: 1.2;
+      display: block;
+      margin: 0;
+      width: 100%;
+      border: none;
+      border-bottom: 2px solid rgb(95,90,90);
+      transition: all 0.5s;
+      padding: 0.7rem 0 0.5rem;
+      background-color: rgba(0,0,0,0);
     }
-     form .button {
-       width:100%;
-     }
 
+    .enquiry textarea {
+      resize: none;
+    }
 
+    .input-text:focus {
+      border-color: #d7b1a2;
+    }
+
+    .input-label {
+      display: block;
+      position: absolute;
+      top:0;
+      font-family: "Pt Sans";
+      text-transform: uppercase;
+      font-size: 0.8rem;
+      letter-spacing: 1px;
+      color: rgb(90,90,90);
+    }
+
+    .input-text:placeholder-shown + .input-label {
+      /* While the placeholder is visible, we want to hide the label. */
+      visibility: hidden;
+      z-index: -1;
+    }
+
+    .input-text:not(:placeholder-shown) + .input-label,
+    .input-text:focus:not(:placeholder-shown) + .input-label {
+      /**
+       * While the placeholder is not shown - i.e. the input has a value - we want
+       * to animate the label into the floated position.
+       */
+      visibility: visible;
+      z-index: 1;
+      opacity: 1;
+      /**
+       * These props will be added in the demo once variables are defined:
+       *
+       * transform
+       * transition
+       *
+       * They will give the label floated positioning and styling.
+       */
+    }
 
      // Course Subscribe
 
