text sizes in campaign section

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -31,17 +31,17 @@ layout: default
       {{page.campaign.campaign-text_html}}
     </div>
     <div class="grid padded-2-v">
-      <div class="col-3_md-4_xs-12 padded-1">
+      <div class="col-4_xs-12 padded-1">
         <h3 class="subtle-heading"> {{page.campaign.team-heading-1}}</h3>
-        <p class="subtle"> {{page.campaign.team-text-1_html}} </p>
+        <div class="subtle"> {{page.campaign.team-text-1_html}} </div>
       </div>
-      <div class="col-3_md-4_xs-12 padded-1">
+      <div class="col-4_xs-12 padded-1">
         <h3 class="subtle-heading"> {{page.campaign.team-heading-2}}</h3>
-        <p class="subtle"> {{page.campaign.team-text-2_html}} </p>
+        <div class="subtle"> {{page.campaign.team-text-2_html}} </div>
       </div>
-      <div class="col-3_md-4_xs-12 padded-1">
+      <div class="col-4_xs-12 padded-1">
         <h3 class="subtle-heading"> {{page.campaign.team-heading-3}}</h3>
-        <p class="subtle"> {{page.campaign.team-text-3_html}} </p>
+        <div class="subtle"> {{page.campaign.team-text-3_html}} </div>
       </div>
     </div>
   </div>
