subtle underline for links in campaign section

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -118,6 +118,10 @@ layout: default
         position: relative;
         width: 80vh;
       }
+
+      .campaign-section a {
+        border-color: rgb(230,230,230);
+      }
       .d-p-b-3 {
         padding-left: 9vh;
         margin-top: -4rem;
