--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -88,6 +88,10 @@ layout: default
       font-size: 8vw;
     }
 
+    .campaign-section p a {
+      border-color: rgb(230,230,230);
+    }
+
     @media(max-width:768px) {
       .campaign-section {
         background-color: #F2EEE9;
@@ -119,9 +123,6 @@ layout: default
         width: 80vh;
       }
 
-      .campaign-section a {
-        border-color: rgb(230,230,230);
-      }
       .d-p-b-3 {
         padding-left: 9vh;
         margin-top: -4rem;
