Updated '_includes/site-footer.html' via CloudCannon

--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -4,7 +4,7 @@
     <h2>
         Eyes of a Nomad.
      </h2>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    <p> Photographer & Videography specialising in Fashion, Swim & Lifestyle in Bali, Indonesia. </p>
   </div>
   <div class="col-1 sm-hidden"></div>
   <!-- column -->
