Emile: "did you push that change"

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -35,7 +35,7 @@ page_blocks:
 
       {% for project in relevant-projects reversed %}
 
-        {% include project-loop-item.html %}
+        {% include project-loop-item-small.html %}
 
       {% endfor %}
 
