--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -382,6 +382,7 @@
     font-family: "Source Sans Pro";
     font-weight: bold;
     font-size: 10vw;
+    letter-spacing: -0.2vw;
   }
 
   .med-bold {
@@ -390,6 +391,7 @@
 
   .sm-bold {
     font-size: 2.5rem;
+    letter-spacing: -0.1vw;
   }
 
   .border-left    { border-left: 2px solid }
