--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -20,9 +20,11 @@ page_blocks:
   <hr class="centered">
 </section>
 
+<div class="capped-width">
 {% for block in page.page_blocks %}
       {% include blocks/{{block._id}}.html block=block %}
 {% endfor %}
+</div>
 
 <section class="padded-tall">
   <h2 class="med-bold"> Explore More Projects. </h2>
