header and footer

--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -13,6 +13,7 @@
       <a href="/about"> About </a>|
       <a href="/portfolio"> Portfolio </a>|
       <a href="/work-with-us"> Work with Us </a>|
+      <a href="/work-with-us#sservices"> Services </a>|
       <a href="/contact"> Contact </a>
     </nav>
     <nav class="inline socials">
