--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -27,5 +27,6 @@
   <a href="/"> Home </a>
   <a href="/portfolio"> Portfolio </a>
   <a href="/work-with-us"> Work With Us </a>
+  <a href="/work-with-us#services"> Services </a>|
   <a href="/contact"> Contact </a>
 </nav>
